update: config.yml
- remove website link

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Lifelong Student"
   location         : "Earth"
   employer         : "Kathmandu University"
-  uri              : "rishavdhungel.com.np"
+  uri              : #
   email            : "rishavdhungel1@gmail.com" 
 
   # Academic websites
