--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Rishav Dhungel"
 title_separator          : "-"
 name                     : &name "Rishav Dhungel"
 description              : &description "Figuring Out"
-url                      : https://rishavdhungel.com.np # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -25,7 +25,7 @@ author:
   name             : "Rishav Dhungel"
   pronouns         : # example: "she/her"  
   bio              : "Lifelong Student"
-  location         : "Earth"
+  location         : "Dhulikhel, Nepal"
   employer         : "Kathmandu University"
   uri              : #
   email            : "rishavdhungel1@gmail.com" 
@@ -108,7 +108,7 @@ staticman:
       options:
         format           : "iso8601" # "iso8601" (default), "timestamp-seconds", "timestamp-milliseconds"
 atom_feed:
-  hide                   : false     # change to true to hide the RSS feed in the footer
+  hide                   : true     # change to true to hide the RSS feed in the footer
   path                   : # blank (default) uses feed.xml
 
 
